# backend-craft

./: .gitignore  CHANGELOG.md  CHECKERS.md  CLAUDE_HANDOFF.md  CONTRIBUTING.md  FAILURE_CARDS.md  FORWARD_TESTS.md  NOTICE.md  README.en.md  README.md  SECURITY.md  SKILL_ARCHITECTURE.md  SOURCES.md  queue.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ANATOMY.md  BACKGROUND_WORKER.md  CASE_PIPELINE.md  CLAUDE_HANDOFF.md  CONTRIBUTOR_GUIDE.md  EVIDENCE_LOG.md  FORWARD_TESTS.md  IMPLEMENTATION_EVIDENCE_PASS.md  README.md  SOURCES.md  STATUS.md  WRITING_STYLE.md
fixtures/: README.md
fixtures/python-fastapi/: README.md  pyproject.toml
fixtures/python-fastapi/app/: __init__.py  auth.py  db.py  main.py
fixtures/python-fastapi/migrations/: 001_init.sql
fixtures/python-fastapi/tests/: conftest.py  test_app.py
forward-test-results/: 001-start-mode.md  002-retrofit.md  003-tenant-ownership.md  004-payment-idempotency.md  005-unsafe-migration.md  006-queue-consumer.md  007-retry-wrapper.md  008-node-csv-export.md  009-go-parallel-fanout.md  010-python-async-task.md  011-dto-drift.md  012-observability-webhook.md  013-validation-library-decision.md  014-rewrite-discipline.md  101-start-mode.md  102-retrofit.md  103-tenant-ownership.md  104-payment-idempotency.md  105-unsafe-migration.md  106-queue-consumer.md  107-retry-wrapper.md  108-node-csv-export.md  109-go-parallel-fanout.md  110-python-async-task.md  111-dto-drift.md  112-observability-webhook.md  113-validation-library-decision.md  114-rewrite-discipline.md  301-write-tests.md  (+1 more)
(+68 files in other folders)
